--- a/src/pages/hot.html
+++ b/src/pages/hot.html
@@ -16,7 +16,7 @@
     <main class="content">
         <i class="fas fa-tools striped-card-icon"></i>
         <section class="card striped-card" style="background: repeating-linear-gradient(45deg, yellow, yellow 10px, black 10px, black 20px);">
-            <img src="/src/images/kommt.jpeg" alt="Bild" class="striped-card-img">
+            <img src="/src/images/bauen1.jpeg" alt="Bild" class="striped-card-img">
             <h2 class="striped-card-title">Zemerini baut noch...</h2>
         </section>
     </main>
