--- a/src/pages/100.html
+++ b/src/pages/100.html
@@ -30,7 +30,7 @@
 <body class="main-body">
     <header style="display: flex; align-items: center;">
         <h1 style="margin: 0 0 0 20px; color: white;">100 Gründe</h1>
-        <img id="profile-picture" class="profile-picture" src="" alt="Profile Picture" style="display: none; object-fit: cover; width: 50px; height: 50px; border-radius: 50%;">
+        <img id="profile-picture" class="profile-picture" src="../images/profile-picture.jpg" alt="Profile Picture" style="display: none; object-fit: cover; width: 50px; height: 50px; border-radius: 50%;">
     </header>
     <main class="content">
         <section class="card" style="text-align: left; font-family: 'Roboto', sans-serif;">
