--- a/src/pages/sos.html
+++ b/src/pages/sos.html
@@ -11,12 +11,12 @@
 <body class="main-body">
     <header style="display: flex; align-items: center;">
         <h1 style="margin: 0 0 0 20px; color: white;">Notfall</h1>
-        <img id="profile-picture" class="profile-picture" src="" alt="Profile Picture" style="display: none; object-fit: cover; width: 50px; height: 50px; border-radius: 50%;">
+        <img id="profile-picture" class="profile-picture" src="../images/profile-picture.jpg" alt="Profile Picture" style="display: none; object-fit: cover; width: 50px; height: 50px; border-radius: 50%;">
     </header>
     <main class="content">
         <i class="fas fa-tools striped-card-icon"></i>
         <section class="card striped-card" style="background: repeating-linear-gradient(45deg, yellow, yellow 10px, black 10px, black 20px);">
-            <img src="/src/images/bauen1.jpeg" alt="Bild" class="striped-card-img">
+            <img src="../images/bauen1.jpeg" alt="Bild" class="striped-card-img">
             <h2 class="striped-card-title">Zemerini baut noch...</h2>
         </section>
     </main>
